Fixed text wrapping around image in stories page.

--- a/src/components/stories/StoryItem.module.css
+++ b/src/components/stories/StoryItem.module.css
@@ -20,6 +20,7 @@
 
 .story-item > :last-child {
   margin-left: 5px;
+  width: 100%;
 }
 
 .story-item span {
@@ -30,6 +31,8 @@
 .story-item img {
   width: 40px;
   height: 40px;
+  float: left;
+  margin-right: 5px;
 }
 
 .story-item a {
